--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,10 @@
 Flask==0.10.1
+Flask-Sockets==0.1
 Jinja2==2.7.1
 MarkupSafe==0.18
 Werkzeug==0.9.4
 facebook-sdk==0.4.0
+gevent==0.13.8
+gevent-websocket==0.3.6
+greenlet==0.4.1
 itsdangerous==0.23
